--- a/RWANDARECRUIT.html
+++ b/RWANDARECRUIT.html
@@ -154,7 +154,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .button {
-    background-color: #293442;
+    background-color: rgb(82, 210, 255);
     border: none;
     color: #ffffff;
     padding: 12px;
