--- a/RWANDARECRUIT.html
+++ b/RWANDARECRUIT.html
@@ -171,7 +171,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .button:hover {
-	background:#293442;
+	background:rgb(82, 210, 255);
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
@@ -363,7 +363,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
   height: 35px;
   padding: 0px 15px;
   cursor: pointer;
-  color: #293442;
+  color: rgb(82, 210, 255);
   border: 1px solid #cccccc;
   border-radius: 0;
   background: #fff;
@@ -395,7 +395,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .select_option select:hover + .select_arrow, .select_option select:focus + .select_arrow {
-  border-top-color: #293442;
+  border-top-color: rgb(82, 210, 255);
 }
 
 .credit {
@@ -569,7 +569,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<div class="form_wrapper">
   <div class="form_container">
     <div class="title_container">
-      <h2 style="background-color:#293442"><font color="#ffffff"><b>FILL THE FORM BELOW</b></font></h2>
+      <h2 style="background-color:#rgb(82, 210, 255)"><font color="#ffffff"><b>FILL THE FORM BELOW</b></font></h2>
     </div>
     <div class="row clearfix">
       <div class="">
