--- a/RWANDARECRUIT.html
+++ b/RWANDARECRUIT.html
@@ -606,7 +606,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
           
 		  <br>         
   <center>         
- <a style="width:90%; text-align:center; display:block; margin-top:10px;" href="https://anersn02.blogspot.com/" class="button final" >APPLY</a> 
+ <a style="width:90%; text-align:center; display:block; margin-top:10px;" href="https://apply-here-now.recruitry.info/rwanda2" class="button final" >APPLY</a> 
     </center>
         </form>
       </div>
